--- a/web/index.html
+++ b/web/index.html
@@ -32,17 +32,6 @@
   <title>Panel</title>
   <link rel="manifest" href="manifest.json">
 
-  <script>
-    // Will be replaced at build time.
-    let serviceWorkerVersion = "{{flutter_service_worker_version}}";
-    // Fallback if placeholder wasn't replaced
-    if (serviceWorkerVersion === "{{flutter_service_worker_version}}") {
-      serviceWorkerVersion = null;
-    }
-  </script>
-  <!-- This script adds the flutter initialization JS code -->
-  <script src="flutter.js" defer></script>
-  
   <!-- Disable Firebase for web -->
   <script>
     // Stub Firebase objects for web
@@ -54,14 +43,32 @@
 </head>
 <body>
   <script>
-    window.addEventListener('load', function() {
-      const config = {};
-      if (typeof serviceWorkerVersion !== 'undefined' && serviceWorkerVersion !== null) {
-        config.serviceWorker = {
-          serviceWorkerVersion: serviceWorkerVersion,
-        };
+    // The value below is injected by flutter build, do not touch.
+    var serviceWorkerVersion = null;
+  </script>
+  <script src="flutter.js" defer></script>
+  <script>
+    window.addEventListener('load', function(ev) {
+      // Check if buildConfig is available (new Flutter method)
+      if (_flutter && _flutter.buildConfig) {
+        _flutter.loader.load({
+          serviceWorkerSettings: {
+            serviceWorkerVersion: serviceWorkerVersion,
+          },
+        });
+      } else {
+        // Fallback to old method
+        _flutter.loader.loadEntrypoint({
+          serviceWorker: {
+            serviceWorkerVersion: serviceWorkerVersion,
+          },
+          onEntrypointLoaded: function(engineInitializer) {
+            engineInitializer.initializeEngine().then(function(appRunner) {
+              appRunner.runApp();
+            });
+          }
+        });
       }
-      _flutter.loader.load(config);
     });
   </script>
 </body>
