--- a/web/index.html
+++ b/web/index.html
@@ -1,40 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
   <base href="$FLUTTER_BASE_HREF">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
 
-  <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="pannel">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>pannel</title>
   <link rel="manifest" href="manifest.json">
   <script>
-    window.openDevicePopup = function(url, features) {
+    function openDevicePopup(url) {
+      const width = 414;
+      const height = 896;
+      const screenWidth = window.screen.width || 1920;
+      const screenHeight = window.screen.height || 1080;
+      const left = Math.round((screenWidth - width) / 2);
+      const top = Math.round((screenHeight - height) / 2);
+      const features = 'width=' + width + ',height=' + height + ',left=' + left + ',top=' + top + ',resizable=yes,scrollbars=yes,toolbar=no,menubar=no';
       return window.open(url, '_blank', features);
-    };
+    }
   </script>
 </head>
 <body>
